# Memory-Persistent-Conversational-Agent

./: .gitignore  README.md  demo.py  main.py  pyproject.toml
agent/: __init__.py  agent.py  extractor.py  memory_store.py
tests/: test_extractor.py  test_memory_store.py
