[project]
name = "memory-agent"
version = "0.1.0"
description = "Conversational agent with persistent memory across sessions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.410",
    "ruff>=0.15.15",
]
